--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
@@ -103,6 +103,7 @@
                     <MenuItem Header="{lex:LocText CalculateOccupiedSpace}" InputGestureText="Ctrl+L"
                               Command="{Binding ActivePane.CalculateSizeCommand}" CommandParameter="{StaticResource True}" />
                     <MenuItem Header="{lex:LocText CheckFreestyleDatabase}" Command="{Binding ActivePane.CheckFreestyleDatabaseCommand}" />
+                    <MenuItem Header="{lex:LocText ShowFtpLog}" Command="{Binding ActivePane.ShowFtpLogCommand}" />
                 </MenuItem>
                 <MenuItem Header="{lex:LocText OptionsMenu}">
                     <MenuItem Header="{lex:LocText Settings, Suffix={x:Static constants:Strings.DotDotDot}}" Command="{x:Static commands:FileManagerCommands.SettingsCommand}" />
