--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FreestyleDatabaseCheckerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FreestyleDatabaseCheckerWindow.xaml
@@ -1,14 +1,14 @@
-﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.FreestyleDatabaseCheckerWindow" 
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                       xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
-                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
-                       xmlns:c="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
-                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       Width="720" Title="{lex:LocText ErrorsInFreestyleDatabase}">
-    <primitives:DialogBase.Resources>
+﻿<primitives:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.FreestyleDatabaseCheckerWindow" 
+                             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+                             xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                             xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
+                             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                             xmlns:c="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                             lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                             lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                             MinWidth="320" MinHeight="240" Width="640" Height="480" Title="{lex:LocText ErrorsInFreestyleDatabase}">
+    <primitives:BorderlessWindow.Resources>
         <Style TargetType="DataGrid" x:Key="Grid">
             <Setter Property="AutoGenerateColumns" Value="False"/> 
             <Setter Property="IsTextSearchEnabled" Value="False"/> 
@@ -34,66 +34,108 @@
                 </StackPanel>
             </Grid>
         </DataTemplate>
-    </primitives:DialogBase.Resources>
-    <AdornerDecorator>
-        <Grid x:Name="LayoutRoot">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="240" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="240" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <TextBlock Grid.Row="0" Text="{lex:Loc TheFollowingGamesAreMissing}" HorizontalAlignment="Left" Margin="0,0,0,10" TextWrapping="Wrap" />
-
-            <DataGrid Grid.Row="1" ItemsSource="{Binding MissingFolders}" Style="{StaticResource Grid}">
-                <DataGrid.Columns>
-                    <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" Width="Auto" IsReadOnly="True" CellTemplate="{StaticResource NameColumnTemplate}"/>
-                    <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Path}" Width="*" IsReadOnly="True" Binding="{Binding Path}"/>
-                </DataGrid.Columns>
-            </DataGrid>
-
-            <GridSplitter Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Stretch" ShowsPreview="True" Width="3" Background="{StaticResource ControlBackgroundBrush}" />
-
-            <TextBlock Grid.Row="3" Text="{lex:Loc TheFollowingGamesMightHaveLeftovers}" HorizontalAlignment="Left" Margin="0,10,0,10" TextWrapping="Wrap" />
-
-            <DataGrid Grid.Row="4" ItemsSource="{Binding MissingEntries}" Style="{StaticResource Grid}" RowDetailsVisibilityMode="Visible">
-                <DataGrid.Columns>
-                    <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" Width="Auto" IsReadOnly="True" CellTemplate="{StaticResource NameColumnTemplate}"/>
-                    <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Path}" Width="*" IsReadOnly="True" Binding="{Binding Path}"/>
-                    <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Size}" Width="80" IsReadOnly="True" Binding="{Binding Size, Converter={StaticResource SizeConverter}}">
-                        <DataGridTextColumn.ElementStyle>
-                            <Style TargetType="TextBlock">
-                                <Setter Property="HorizontalAlignment" Value="Right" />
-                            </Style>
-                        </DataGridTextColumn.ElementStyle>
-                    </DataGridTextColumn>
-                </DataGrid.Columns>
-                <DataGrid.RowDetailsTemplate>
+    </primitives:BorderlessWindow.Resources>
+    <Grid x:Name="LayoutRoot">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+            
+        <TabControl>
+            <TabItem Visibility="{Binding HasMissingFolders, Converter={StaticResource BoolToVis}}" Header="{Binding MissingFoldersCount}">
+                <TabItem.HeaderTemplate>
                     <DataTemplate>
-                        <c:ProportionalPanel ItemsSource="{Binding Content}" ValueMemberPath="Size">
-                            <c:ProportionalPanel.ItemTemplate>
-                                <DataTemplate>
-                                    <Border Background="{Binding ContentType, Converter={StaticResource ContentTypeConverter}}" Padding="2">
-                                        <TextBlock Text="{Binding Title}" ToolTip="{Binding Title}"/>
-                                    </Border>
-                                </DataTemplate>
-                            </c:ProportionalPanel.ItemTemplate>
-                        </c:ProportionalPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{lex:Loc MissingGames}"/>
+                            <Border CornerRadius="8" Background="#dc0d17" Margin="3,1,0,0">
+                                <TextBlock Text="{Binding}" Foreground="White" FontWeight="Bold" Margin="5,0,5,0" FontSize="10" />
+                            </Border>
+                        </StackPanel>
                     </DataTemplate>
-                </DataGrid.RowDetailsTemplate>
-            </DataGrid>
+                </TabItem.HeaderTemplate>
+                    
+                <TabItem.Content>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="{lex:Loc TheFollowingGamesAreMissing}" HorizontalAlignment="Left" Margin="0,0,0,10" TextWrapping="Wrap" />
 
-            <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-                <Button Width="75" Content="{lex:LocText Ok}" Margin="5" Click="OkButtonClick" />
-            </StackPanel>
+                        <DataGrid Grid.Row="1" ItemsSource="{Binding MissingFolders}" Style="{StaticResource Grid}">
+                            <DataGrid.Columns>
+                                <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" Width="Auto" IsReadOnly="True" CellTemplate="{StaticResource NameColumnTemplate}"/>
+                                <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Path}" Width="*" IsReadOnly="True" Binding="{Binding Path}"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Grid>
+                </TabItem.Content>
+            </TabItem>
+            <TabItem Visibility="{Binding HasMissingEntries, Converter={StaticResource BoolToVis}}" Header="{Binding MissingEntriesCount}">
+                <TabItem.HeaderTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{lex:Loc PossibleLeftovers}"/>
+                            <Border CornerRadius="8" Background="#dc0d17" Margin="3,1,0,0">
+                                <TextBlock Text="{Binding}" Foreground="White" FontWeight="Bold" Margin="5,0,5,0" FontSize="10" />
+                            </Border>
+                        </StackPanel>
+                    </DataTemplate>
+                </TabItem.HeaderTemplate>
 
-            <e:Interaction.Triggers>
-            </e:Interaction.Triggers>
-            <Grid.InputBindings>
-            </Grid.InputBindings>
-        </Grid>
-    </AdornerDecorator>
-</primitives:DialogBase>
+                <TabItem.Content>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="{lex:Loc TheFollowingGamesMightHaveLeftovers}" HorizontalAlignment="Left" Margin="0,10,0,10" TextWrapping="Wrap" />
+
+                        <DataGrid Grid.Row="1" ItemsSource="{Binding MissingEntries}" Style="{StaticResource Grid}" RowDetailsVisibilityMode="Visible">
+                            <DataGrid.Columns>
+                                <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" Width="Auto" IsReadOnly="True" CellTemplate="{StaticResource NameColumnTemplate}"/>
+                                <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Path}" Width="*" IsReadOnly="True" Binding="{Binding Path}"/>
+                                <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Size}" Width="80" IsReadOnly="True" Binding="{Binding Size, Converter={StaticResource SizeConverter}}">
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="HorizontalAlignment" Value="Right" />
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
+                            </DataGrid.Columns>
+                            <DataGrid.RowDetailsTemplate>
+                                <DataTemplate>
+                                    <c:ProportionalPanel ItemsSource="{Binding Content}" ValueMemberPath="Size">
+                                        <c:ProportionalPanel.ItemTemplate>
+                                            <DataTemplate>
+                                                <Border Background="{Binding ContentType, Converter={StaticResource ContentTypeConverter}}" Padding="2">
+                                                    <TextBlock Text="{Binding Title}">
+                                                        <TextBlock.ToolTip>
+                                                            <MultiBinding Converter="{StaticResource StringFormatter}" ConverterParameter="{}{0} ({1} bytes)">
+                                                                <Binding Path="Title"/>
+                                                                <Binding Path="Size"/>
+                                                            </MultiBinding>
+                                                        </TextBlock.ToolTip>
+                                                    </TextBlock>
+                                                </Border>
+                                            </DataTemplate>
+                                        </c:ProportionalPanel.ItemTemplate>
+                                    </c:ProportionalPanel>
+                                </DataTemplate>
+                            </DataGrid.RowDetailsTemplate>
+                        </DataGrid>
+                        
+                        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,0">
+                            <Button MinWidth="75" Content="{lex:Loc CleanUp}" Margin="5,0,0,0" Command="{Binding CleanUpCommand}"/>
+                        </StackPanel>
+                    </Grid>
+                </TabItem.Content>
+            </TabItem>
+        </TabControl>
+
+        <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+            <Button Width="75" Content="{lex:LocText Ok}" Margin="5" Command="{Binding CloseCommand}" />
+        </StackPanel>
+    </Grid>
+</primitives:BorderlessWindow>
