--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TreeSelectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TreeSelectionDialog.xaml
@@ -1,4 +1,4 @@
-﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.TreeSelectorDialog"
+﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.TreeSelectionDialog"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
