--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ProgressDialog.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="{Binding ProgressMessage}" Margin="0,0,0,5" TextWrapping="Wrap" Width="320" HorizontalAlignment="Left"/>
+        <TextBlock Text="{Binding ProgressMessage}" Margin="0,0,0,10" TextWrapping="Wrap" HorizontalAlignment="Left"/>
         <ProgressBar Grid.Row="1" Minimum="0" Maximum="100" Value="{Binding ProgressValue, Mode=OneWay}" Height="16" IsIndeterminate="{Binding IsIndetermine}"/>
     </Grid>
 </primitives:DialogBase>
