--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/LoginDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/LoginDialog.xaml
@@ -6,7 +6,7 @@
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       Width="400">
+                       Width="400" Title="{Binding Title}">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
@@ -18,20 +18,22 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Margin="5,0,0,5" x:Name="Message" TextWrapping="Wrap" />
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Margin="5,0,0,5" Text="{Binding Message}" TextWrapping="Wrap" />
 
         <TextBlock Grid.Row="1" Grid.Column="0" Text="{lex:Loc Username}" Margin="5,0,0,5" VerticalAlignment="Center"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,5" x:Name="Username"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,5" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" x:Name="Username"/>
 
         <TextBlock Grid.Row="2" Grid.Column="0" Text="{lex:Loc Password}" Margin="5,0,0,5" VerticalAlignment="Center"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,0,5" x:Name="Password"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,0,5" Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}"/>
         
-        <CheckBox Grid.Row="3" Grid.Column="1" Content="{lex:Loc RememberPassword}" Margin="0,0,0,10" x:Name="RememberPassword"/>
+        <CheckBox Grid.Row="3" Grid.Column="1" Content="{lex:Loc RememberPassword}" Margin="0,0,0,10" IsChecked="{Binding RememberPassword}" Visibility="{Binding IsRememberPasswordEnabled, Converter={StaticResource BoolToVis}}"/>
 
-        <StackPanel Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
-            <Button Content="{lex:LocText Ok}" Margin="5" MinWidth="75" Click="OkButtonClick"/>
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
+            <Button Content="{lex:LocText UseDefault}" Margin="5" MinWidth="75" Click="DefaultButtonClick" Visibility="{Binding IsUseDefaultEnabled, Converter={StaticResource BoolToVis}}"/>
+            <Button Content="{lex:LocText Ok}" Margin="5" MinWidth="75" Click="OkButtonClick" IsEnabled="{Binding IsValid}"/>
             <Button Content="{lex:LocText Cancel}" Margin="5" MinWidth="75" Click="CancelButtonClick"/>
         </StackPanel>
 
