--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
@@ -12,7 +12,7 @@
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       Width="520" Title="{lex:LocText ConnectionDetails}">
+                       Width="420" Title="{lex:LocText ConnectionDetails}">
     <primitives:DialogBase.Resources>
         <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
         <Style TargetType="TextBox" x:Key="TextBoxStyle">
@@ -142,7 +142,15 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <TextBlock Grid.Column="0" Grid.Row="3" Text="{lex:LocText Username, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
+
+        <TextBlock Grid.Column="0" Grid.Row="3" Text="{lex:LocText Login, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
+        <StackPanel Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="0,0,0,5" Orientation="Horizontal">
+            <TextBlock Text="{Binding LoginInfo}" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" VerticalAlignment="Center"/>
+            <Button Content="{lex:Loc Change}" Command="{Binding ChangeLoginCommand}" Margin="15,0,0,0"/>
+        </StackPanel>
+        
+
+        <!--<TextBlock Grid.Column="0" Grid.Row="3" Text="{lex:LocText Username, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
         <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Username" Style="{StaticResource TextBoxStyle}" 
                  IsEnabled="{Binding ElementName=AnonymousLogin, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
             <TextBox.Text>
@@ -166,7 +174,8 @@
         </TextBox>
         <CheckBox Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="5" Margin="0,0,0,5" x:Name="AnonymousLogin" Checked="AnonymousLoginOnChange" Unchecked="AnonymousLoginOnChange">
             <TextBlock TextWrapping="Wrap" Text="{lex:LocText AnonymousLogin}" Margin="0,-2,0,0"/>
-        </CheckBox>
+        </CheckBox>-->
+        
         <CheckBox Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="6" Margin="0,0,0,15" IsChecked="{Binding UsePassiveMode}">
             <TextBlock TextWrapping="Wrap" Text="{lex:LocText UsePassiveMode}" Margin="0,-2,0,0"/>
         </CheckBox>
