--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/AboutDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/AboutDialog.xaml
@@ -2,13 +2,26 @@
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                       xmlns:f="clr-namespace:Neurotoxin.Godspeed.Presentation.Formatters;assembly=Neurotoxin.Godspeed.Presentation"
+                       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
                        xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       xmlns:f="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Formatters"
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
                        Width="600" Title="{lex:Loc About}">
+    <primitives:DialogBase.Resources>
+        <Style TargetType="xctk:RichTextBox">
+            <Setter Property="Cursor" Value="Arrow"/>
+            <Setter Property="IsReadOnly" Value="True"/>
+            <Setter Property="IsReadOnlyCaretVisible" Value="False"/>
+            <Setter Property="IsDocumentEnabled" Value="True"/>
+            <Setter Property="TextFormatter">
+                <Setter.Value>
+                    <f:HtmlFormatter/>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </primitives:DialogBase.Resources>
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -30,29 +43,14 @@
                 <ColumnDefinition Width="10"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <controls:RichTextBox Grid.Column="0" Text="{lex:LocText CreditsContent}">
-                <controls:RichTextBox.Resources>
-                    <Style TargetType="Hyperlink">
-                        <Setter Property="Cursor" Value="Hand"/>
-                        <EventSetter Event="RequestNavigate" Handler="OnHyperlinkRequestNavigate"/>
-                    </Style>
-                </controls:RichTextBox.Resources>
-                <controls:RichTextBox.TextFormatter>
-                    <f:HtmlFormatter/>
-                </controls:RichTextBox.TextFormatter>
-            </controls:RichTextBox>
-            <controls:RichTextBox Grid.Column="2" Text="{lex:LocText GreetzContent}">
-                <controls:RichTextBox.TextFormatter>
-                    <f:HtmlFormatter/>
-                </controls:RichTextBox.TextFormatter>
-            </controls:RichTextBox>
+            <xctk:RichTextBox Grid.Column="0" Text="{lex:LocText CreditsContent}">
+            </xctk:RichTextBox>
+            <xctk:RichTextBox Grid.Column="2" Text="{lex:LocText GreetzContent}">
+            </xctk:RichTextBox>
         </Grid>
 
-        <controls:RichTextBox Grid.Row="3" Margin="0,0,0,15" Text="{lex:LocText LicenseContent}" BorderThickness="0" Background="Transparent">
-            <controls:RichTextBox.TextFormatter>
-                <f:HtmlFormatter/>
-            </controls:RichTextBox.TextFormatter>
-        </controls:RichTextBox>
+        <xctk:RichTextBox Grid.Row="3" Margin="0,0,0,15" Text="{lex:LocText LicenseContent}" BorderThickness="0" Background="Transparent">
+        </xctk:RichTextBox>
 
         <Button Grid.Row="4" Content="{lex:LocText Close}" Width="75" x:Name="Ok" Click="OkButtonClick"/>
     </Grid>
