--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/UserStatisticsParticipationDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/UserStatisticsParticipationDialog.xaml
@@ -2,10 +2,10 @@
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
-                       xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
                        xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
-                       xmlns:f="clr-namespace:Neurotoxin.Godspeed.Presentation.Formatters;assembly=Neurotoxin.Godspeed.Presentation"
+                       xmlns:f="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Formatters"
                        xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
@@ -37,12 +37,12 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <controls:RichTextBox Grid.Row="0" x:Name="Description" BorderThickness="0" Background="Transparent"
+                <xctk:RichTextBox Grid.Row="0" x:Name="Description" BorderThickness="0" Background="Transparent"
                                       Text="{lex:LocText UserStatisticsParticipationContent}" Margin="0,0,0,10">
-                    <controls:RichTextBox.TextFormatter>
+                    <xctk:RichTextBox.TextFormatter>
                         <f:HtmlFormatter/>
-                    </controls:RichTextBox.TextFormatter>
-                </controls:RichTextBox>
+                    </xctk:RichTextBox.TextFormatter>
+                </xctk:RichTextBox>
 
                 <RadioButton Grid.Row="1" Content="{lex:LocText YesImWillingToParticipate}" x:Name="Yes" Margin="0,0,0,5" GroupName="Participation" />
                 <RadioButton Grid.Row="2" Content="{lex:LocText NoIWouldNotLikeToParticipate}" x:Name="No" GroupName="Participation" />
